# trendvault

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
api/: serializers.py  urls.py
trendvault/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
youtube/: models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
youtube/migrations/: 0001_create_and_populate_regions.py  0001_create_and_populate_youtube_regions.py  0002_create_and_populate_categories.py  0002_create_and_populate_youtube_categories.py  0003_create_video.py  0003_create_youtube_video_model.py  0004_create_youtube_video_stats_snapshot_model.py  0005_remove_video_region_alter_videostatssnapshot_region.py
youtube/region/: serializers.py  urls.py  views.py
youtube/video/: serializers.py  urls.py  views.py
