[project]
name = "trendvault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "dj-database-url>=3.0.1",
    "django>=5.2.8",
    "google-api-python-client>=2.187.0",
    "google-auth-oauthlib>=1.2.3",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "redis>=7.0.1",
]
